# -sql-

./: .env.example  .gitignore  CLAUDE.md  CREDENTIALS.md  README.md  docker-compose.yml
docs/: CODE_REVIEW_CRITIQUE.md  CODE_REVIEW_CRITIQUE_ROUND2.md  CODE_REVIEW_FIX_LOG.md  FINAL_REVIEW_REPORT.md  INTEGRATION_TEST_FINDINGS.md  INTEGRATION_TEST_REPORT.md  PYTHON_AGENT_CODE_REVIEW.md  PYTHON_AGENT_CODE_REVIEW_FINAL.md  PYTHON_AGENT_PLAN.md  PYTHON_AGENT_PLAN_CRITIQUE.md  TEST_EXECUTION_REPORT.md  TEST_PLAN_FOR_REVIEWER.md
slow-sql-agent/: .gitignore  Dockerfile  config.py  main.py  models.py  pyproject.toml  requirements.txt
slow-sql-agent/agent/: callbacks.py  factory.py
slow-sql-agent/mq/: consumer.py  publisher.py
slow-sql-agent/prompts/: diagnosis.yaml
slow-sql-agent/tests/: test_agent_diagnosis.py  test_callbacks.py  test_consumer.py  test_models.py  test_tools.py  test_tools_full.py
slow-sql-agent/tools/: data_client.py  definitions.py
slow-sql-gateway/: .gitignore  Dockerfile  pom.xml
slow-sql-web/: .env  .env.development  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
slow-sql-web/src/: App.vue  main.js
slow-sql-web/src/api/: dashboard.js  diagnosis.js  monitor.js  rag.js  request.js  sql.js
slow-sql-web/src/router/: index.js
slow-sql-web/src/stores/: app.js  diagnosis.js
slow-sql-web/src/styles/: base.css  dark-theme.css  variables.css
slow-sql-web/src/views/: CapturedRecords.vue  DashboardView.vue  DiagnoseView.vue  DiagnosisHistory.vue  KnowledgeBase.vue  ManualDiagnose.vue  (+3 more)
sql/: init.sql
(+89 files in other folders)
