[project]
name = "slow-sql-agent"
version = "5.0.0"
description = "V5.0 Python Agent — 慢SQL智能诊断引擎"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.0",
    "redis>=5.0.0",
    "aio-pika>=9.4.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]
